--- a/src/style.css
+++ b/src/style.css
@@ -31,9 +31,6 @@ img,
 video {
   display: block;
   max-width: 100%;
-}
-
-video {
   max-height: 450px;
 }
 
@@ -49,6 +46,7 @@ h1 {
   overflow: hidden;
   margin: 0 auto;
   max-width: 800px;
+  height: 450px;
   background-color: #000;
 }
 
@@ -208,4 +206,10 @@ h1 {
 #file-name {
   font-size: 14px;
   font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  #slide {
+    height: 450px;
+  }
 }
