--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 
 body {
   max-width: 90vw;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -26,7 +27,6 @@ body.paused {
   touch-action: manipulation;
 }
 
-
 img,
 video {
   display: block;
@@ -44,7 +44,6 @@ h1 {
   display: grid;
   border-radius: 4px;
   overflow: hidden;
-  margin: 0 auto;
   max-width: 800px;
   height: 450px;
   background-color: #000;
@@ -101,7 +100,6 @@ h1 {
   display: none;
 }
 
-
 #slide-thumb {
   display: flex;
   position: absolute;
@@ -145,7 +143,7 @@ h1 {
 }
 
 #file {
-  margin: 20px auto;
+  margin: 20px 0;
   max-width: 800px;
   width: 90vw;
 }
@@ -199,6 +197,7 @@ h1 {
 
 #file-info {
   display: none;
+  flex-wrap: wrap;
   margin-top: 18px;
   font-weight: 700;
 }
