--- a/src/style.css
+++ b/src/style.css
@@ -203,11 +203,11 @@ h1 {
 }
 
 #file-name {
-  display: inline;
+  /* display: inline;
   flex-wrap: wrap;
-  word-wrap: break-word;
+  word-wrap: break-word; */
   width: 100%;
-  word-break: break-all;
+  /* word-break: break-all; */
   font-size: 14px;
   font-weight: 500;
 }
