--- a/src/style.css
+++ b/src/style.css
@@ -197,15 +197,12 @@ h1 {
 
 #file-info {
   display: none;
-  flex-wrap: wrap;
   margin-top: 18px;
   font-weight: 700;
 }
 
 #file-name {
-  display: inline;
-  flex-wrap: wrap;
-  /* word-wrap: break-word; */
+  word-wrap: break-word;
   /* word-break: break-all; */
   font-size: 14px;
   font-weight: 500;
